اضافه کردن کانفیگ شخصی و راست چین کردن منو

--- a/resume/templates/panels/menu.jinja2
+++ b/resume/templates/panels/menu.jinja2
@@ -1,4 +1,5 @@
-<ul class="nav navbar-nav navbar-left">
+{# TODO: move navbar-right to css file #}
+<ul class="nav navbar-nav navbar-right">
     {% for i in items %}
         {% if i['items'] %}
             <li class="dropdown {% if i['active'] %}active{% endif %} ">
