--- a/resume/views/home/templates.jinja2
+++ b/resume/views/home/templates.jinja2
@@ -1,5 +1,9 @@
 {% extends main_template %}
 {% block content %}
+    {% if user %}
+        hello {{ user.email }}
+    {% endif %}
+    <br>
 تارنمای مدیریت زرومه
     پروژه‌ی درس پایگاه داده پیشرفته سید حمید مهدوی و پیام زینلی
 {% endblock %}
