--- a/resume/templates/layouts/main.jinja2
+++ b/resume/templates/layouts/main.jinja2
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+{% if form %}
+{% endif %}
 
 <script type="text/javascript" src="{{ request.static_url('resume:static/js/main.js') }}"></script>
 
