--- a/resume/views/cv/edit.jinja2
+++ b/resume/views/cv/edit.jinja2
@@ -1,4 +1,4 @@
 {% extends main_template %}
 {% block content %}
-{{ form.render() | safe }}
+{{ form.render(appstruct, readonly=True) | safe }}
 {% endblock %}
