--- a/resume/views/cv/edit.jinja2
+++ b/resume/views/cv/edit.jinja2
@@ -1,4 +1,5 @@
 {% extends main_template %}
 {% block content %}
-{{ form.render(appstruct, readonly=True) | safe }}
+{#{{ form.render(appstruct, readonly=True) | safe }}#}
+{{ form.render(appstruct) | safe }}
 {% endblock %}
