الان پروژه داره کار می کنه و می شه تحویل داد

--- a/resume/views/home/templates.jinja2
+++ b/resume/views/home/templates.jinja2
@@ -5,5 +5,5 @@
     {% endif %}
     <br>
 تارنمای مدیریت زرومه
-    پروژه‌ی درس پایگاه داده پیشرفته سید حمید مهدوی و پیام زینلی
+    پروژه‌ی درس پایگاه داده پیشرفته سید حمید مهدوی و پیمان زینلی
 {% endblock %}
