--- a/resume/static/css/template.css
+++ b/resume/static/css/template.css
@@ -28,7 +28,7 @@ h1, h2, h3 {
     padding: 15px 15px;
     /*text-align: center;*/
 
-    font-family: "bbnasim", "Helvetica Neue", sans-serif;
+    font-family: "vazir", "Helvetica Neue", sans-serif;
 
 }
 
