--- a/resume/static/css/template.css
+++ b/resume/static/css/template.css
@@ -24,7 +24,7 @@ h1, h2, h3 {
 /*th {*/
 /*text-align: center;*/
 /*}*/
-.starter-template {
+.starter-template pre {
     padding: 15px 15px;
     /*text-align: center;*/
 
